Fix blockquotes color in dark mode

--- a/src/styles/prose-styles.css
+++ b/src/styles/prose-styles.css
@@ -3,7 +3,7 @@
 }
 
 .prose blockquote {
-  @apply font-normal border-l-2 border-gray-200 dark:border-gray-800;
+  @apply font-normal border-l-2 border-gray-200 dark:border-gray-800 dark:text-gray-400;
 }
 
 .prose img {
